[gd_scene load_steps=6 format=3 uid="uid://bobhrar4pirpv"]

[ext_resource type="ButtonGroup" uid="uid://bairrufpuwok0" path="res://batiments/group.tres" id="1_2q0k6"]
[ext_resource type="Texture2D" uid="uid://cs6cjbl108kwr" path="res://assets/batiments/cafet/normal.png" id="1_i5n2j"]
[ext_resource type="Script" uid="uid://cpmijgquee48m" path="res://scripts/batiment_btn.gd" id="2_byio2"]
[ext_resource type="Texture2D" uid="uid://dbwuwk82lxckt" path="res://assets/batiments/cafet/hover.png" id="2_okowy"]

[sub_resource type="BitMap" id="BitMap_npxuh"]

[node name="cafet_btns" type="TextureButton"]
offset_left = 393.0
offset_top = 256.0
offset_right = 512.5
offset_bottom = 357.5
scale = Vector2(4, 4)
pivot_offset = Vector2(56.25, 46.9375)
size_flags_stretch_ratio = 1.6
mouse_default_cursor_shape = 2
button_group = ExtResource("1_2q0k6")
texture_normal = ExtResource("1_i5n2j")
texture_hover = ExtResource("2_okowy")
texture_click_mask = SubResource("BitMap_npxuh")
ignore_texture_size = true
stretch_mode = 3
script = ExtResource("2_byio2")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
